# jobmatch

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: EXAMPLE_RUN.md  PRIVACY.md  PROVIDERS.md  QUICKSTART.md  SCORING.md
docs/assets/: jobmatch-hero.prompt.md
src/jobmatch/: __init__.py  __main__.py  cli.py  database.py  notify.py  pipeline.py  view.py
src/jobmatch/config/: __init__.py  employers.yaml  locations.py  notifications.example.yaml  paths.py  preferences.example.yaml  preferences.py  profile.example.json  profiles.py  providers.example.yaml  searches.example.yaml  sites.py  sites.yaml  tier.py
src/jobmatch/discovery/: jobspy.py  smartextract.py  workday.py
src/jobmatch/enrichment/: detail.py
src/jobmatch/llm/: __init__.py  client.py  parsing.py
src/jobmatch/scoring/: __init__.py  apply.py  cover_letter.py  dedup.py  rules.py  scorer.py  tailor.py  validator.py
src/jobmatch/wizard/: init.py
tests/: test_cli_dry_run.py  test_cover_prompt.py  test_db_queries.py  test_discovery_config.py  test_llm_config.py  test_llm_usage_accounting.py  test_notify_config.py  test_pipeline_dry_run.py  test_scorer.py  test_scoring_rules.py  test_wizard_preferences.py
