[project]
name = "jobmatch"
version = "0.3.0"
description = "AI-powered job discovery, scoring, and digest pipeline"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.11,<3.14"
authors = [{name = "Pickle-Pixel"}, {name = "JobMatch contributors"}]
keywords = ["job-search", "automation", "ai", "scoring", "digest", "telegram"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0",
    "httpx>=0.24",
    "beautifulsoup4>=4.12",
    "playwright>=1.40",
    "python-jobspy>=1.1.82,<2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "pandas>=2.1,<3.0",
    ]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1"]

[project.scripts]
jobmatch = "jobmatch.cli:app"

[project.urls]
Homepage = "https://github.com/everfacture/jobmatch"
Repository = "https://github.com/everfacture/jobmatch"
Issues = "https://github.com/everfacture/jobmatch/issues"
Upstream = "https://github.com/Pickle-Pixel/ApplyPilot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jobmatch"]

[tool.hatch.build]
artifacts = [
    "src/jobmatch/config/*.yaml",
    "src/jobmatch/config/*.json",
]

[tool.ruff]
target-version = "py311"
line-length = 120
